--- a/biblioflex-api/src/main/resources/application.properties
+++ b/biblioflex-api/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=qualite
+
+spring.datasource.url=jdbc:postgresql://localhost:${POSTGRES_PORT}/${POSTGRES_DB}
+spring.datasource.username=${POSTGRES_USER}
+spring.datasource.password=${POSTGRES_PASSWORD}
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.show-sql=true
