--- a/.env.exemple
+++ b/.env.exemple
@@ -1,4 +1,4 @@
-POSTGRES_USER=
-POSTGRES_PASSWORD=
-POSTGRES_DB=
-POSTGRES_PORT=5432
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=mdpPostgres
+POSTGRES_DB=Library
+POSTGRES_PORT=5433
