feat: initialize biblioflex application with core components, routing, and mock data
- Created main application component and routing configuration.
- Added mock data for books and users.
- Implemented book and user list components with AG Grid integration.
- Developed book and user detail pages with observable data fetching.
- Set up Angular testing for the main application component.
- Configured TypeScript settings for the application.
- Added global styles for AG Grid themes.

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,8 @@ build/
 .vscode/
 
 .env
+
+### Angular ###
+/biblioflex-ui/.angular
+/biblioflex-ui/node_modules/
+/biblioflex-ui/package-lock.json
