add sources in sonar-config.properties

--- a/sonar-config.properties
+++ b/sonar-config.properties
@@ -2,3 +2,4 @@ sonar.projectKey=EwenDanielo_qualite
 sonar.organization=EwenDanielo
 sonar.host.url=https://sonarcloud.io
 sonar.token=${{ secrets.SONAR_TOKEN }}
+sonar.sources=biblioflex-api/src,biblioflex-ui/src
