--- a/sonar-config.properties
+++ b/sonar-config.properties
@@ -3,3 +3,6 @@ sonar.organization=EwenDanielo
 sonar.host.url=https://sonarcloud.io
 sonar.token=${{ secrets.SONAR_TOKEN }}
 sonar.sources=biblioflex-api/src,biblioflex-ui/src
+
+sonar.exclusions=**/coverage/**/*, **/node_modules/**/*, **/dist/**/*
+sonar.coverage.exclusions=**/*.spec.ts, **/coverage/**/*, **/test-utils.ts
