--- a/biblioflex-api/src/main/resources/application.properties
+++ b/biblioflex-api/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=qualite
 
-spring.datasource.url=jdbc:postgresql://qualite_postgres:${POSTGRES_PORT}/${POSTGRES_DB}
+spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
 spring.datasource.username=${POSTGRES_USER}
 spring.datasource.password=${POSTGRES_PASSWORD}
 spring.jpa.hibernate.ddl-auto=none
