--- a/sonar-config.properties
+++ b/sonar-config.properties
@@ -8,7 +8,7 @@ sonar.sources=biblioflex-api/src,biblioflex-ui/src
 sonar.sources=biblioflex-api/src,biblioflex-ui/src
 sonar.exclusions=**/node_modules/**,**/*.config.js,**/environment*.ts
 
-# Analyse des tests
+# Analyse des tests   hgjjhgj
 sonar.tests=biblioflex-ui/src
 sonar.test.inclusions=**/*.spec.ts
 
