--- a/sonar-config.properties
+++ b/sonar-config.properties
@@ -2,13 +2,13 @@ sonar.projectKey=EwenDanielo_qualite
 sonar.organization=EwenDanielo
 sonar.host.url=https://sonarcloud.io
 sonar.token=${{ secrets.SONAR_TOKEN }}
-sonar.sources=biblioflex-api/src,biblioflex-ui/src
+# sonar.sources=biblioflex-api/src,biblioflex-ui/src
 
 # Analyse du code source
 sonar.sources=biblioflex-api/src,biblioflex-ui/src
 sonar.exclusions=**/node_modules/**,**/*.config.js,**/environment*.ts
 
-# Analyse des tests   hgjjhgj
+# Analyse des tests
 sonar.tests=biblioflex-ui/src
 sonar.test.inclusions=**/*.spec.ts
 
