--- a/sonar-config.properties
+++ b/sonar-config.properties
@@ -6,7 +6,7 @@ sonar.token=${{ secrets.SONAR_TOKEN }}
 
 # Analyse du code source
 sonar.sources=biblioflex-api/src,biblioflex-ui/src
-sonar.coverage.exclusions=**/node_modules/**,**/*.config.js,**/environment*.ts
+sonar.coverage.exclusions=biblioflex-ui/coverage,**/node_modules,**/*.config.js,**/environment*.ts
 
 # Analyse des tests
 sonar.tests=biblioflex-ui/src
