--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,7 @@ build/
 ### Angular ###
 /biblioflex-ui/.angular
 /biblioflex-ui/node_modules/
+/biblioflex-ui/coverage/
 /biblioflex-ui/package-lock.json
 
 biblioflex-api/.env
