--- a/biblioflex-ui/angular.json
+++ b/biblioflex-ui/angular.json
@@ -78,6 +78,14 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
+            "codeCoverage": true,
+            "codeCoverageExclude": [
+              "**/src/test.ts",
+              "**/src/polyfills.ts",
+              "**/src/main.ts",
+              "**/src/app/app.component.ts"
+            ],
+            "karmaConfig": "karma.conf.js",
             "polyfills": [
               "zone.js",
               "zone.js/testing"
