--- a/biblioflex-api/src/main/resources/application.properties
+++ b/biblioflex-api/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=qualite
 
-spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
-spring.datasource.username=${POSTGRES_USER}
-spring.datasource.password=${POSTGRES_PASSWORD}
+spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST:postgres-db}:${POSTGRES_PORT:5432}/${POSTGRES_DB:Library}
+spring.datasource.username=${POSTGRES_USER:postgres}
+spring.datasource.password=${POSTGRES_PASSWORD:mdpPostgres}
 spring.jpa.hibernate.ddl-auto=none
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
